--- a/resources/fxml/ProductCard.fxml
+++ b/resources/fxml/ProductCard.fxml
@@ -48,7 +48,7 @@
                <children>
                   <Label text="💰" textFill="#27ae60">
                      <font>
-                        <Font name="Arial" size="12.0" />
+                        <Font name="Segoe UI Emoji" size="12.0" />
                      </font>
                   </Label>
                   <Label fx:id="productPrice" text="0.00₺/kg" textFill="#27ae60">
