--- a/resources/fxml/ShoppingCart.fxml
+++ b/resources/fxml/ShoppingCart.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
@@ -330,6 +332,23 @@
             
             <VBox spacing="10.0" VBox.vgrow="ALWAYS">
                <children>
+                  <HBox spacing="10.0" alignment="CENTER_LEFT">
+                     <children>
+                        <VBox spacing="4.0">
+                           <children>
+                              <Label text="Delivery Date" />
+                              <DatePicker fx:id="deliveryDatePicker" />
+                           </children>
+                        </VBox>
+                        <VBox spacing="4.0">
+                           <children>
+                              <Label text="Delivery Time" />
+                              <ComboBox fx:id="deliveryTimeCombo" prefWidth="140.0" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+
                   <Button fx:id="checkoutButton" maxWidth="Infinity" onAction="#handleCheckout" prefHeight="55.0" styleClass="checkout-btn" text="✅ CHECKOUT">
                      <font>
                         <Font name="Arial Black" size="16.0" />
